# epigenomics

./: .gitignore  Cargo.toml  README.md  extract.sql  plotting.ipynb  steady_state.sql
alphabeta/: Cargo.toml
alphabeta/benches/: alphabeta_benchmark.rs
alphabeta/data/: model_wt.txt  pedigree_generated.txt  pedigree_wt.txt
alphabeta/src/: ABneutral.rs  BootModel.rs  alphabeta.rs  bin.rs  divergence.rs  files.rs  lib.rs  macros.rs  pedigree.rs  setup.rs  structs.rs  windows_structs.rs
alphabeta/src/cli/: arguments.rs  windows.rs
db/: Cargo.toml  joined_annotations.sql  window.sql  window_counts.sql
db/src/: lib.rs
extractor/: Cargo.toml  run.bash
extractor/src/: main.rs
importer/: Cargo.toml
importer/src/: main.rs
lib/: Cargo.toml
lib/src/: arguments.rs  error.rs  files.rs  lib.rs  methylation_site.rs  setup.rs  structs.rs  windows.rs
raw/: cmt3.npy  suv.npy  wt.npy
src/: arguments.rs  cli.rs  error.rs  files.rs  lib.rs  main.rs  methylation_site.rs  setup.rs  structs.rs  windows.rs
tests/: test.rs
