[package]
name = "extractor"
version = "0.5.0"
edition = "2021"

[lib]
name = "extractor"
path = "src/lib.rs"

[[bin]]
name = "extractor"
path = "src/cli.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
itertools = "0.10.5"
thiserror = "1.0.37"
rayon = "1.5"

[dev-dependencies]
serial_test = "*"