[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
db = {path = "../db"}
alphabeta = { path = "../alphabeta" }
clap = { version = "4.0.27", features = ["derive"] }
tokio = { version = "1.25.0", features =["full"] }
indicatif = "0.17.3"
