[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
itertools = "0.10.5"
thiserror = "1.0.37"
rayon = "1.5"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }


[dev-dependencies]
serial_test = "*"

